# monitor_mcp

./: .gitignore  README.md  SCENARIOS.md  config.json  pyproject.toml
docs/: feature_spec.md
examples/: analyze_loop.py
src/monitor_mcp/: __init__.py  analyzer.py  buffer.py  engine.py  logging_setup.py  server.py  simulator.py  types.py  ui.py
tests/: test_buffer.py  test_engine.py  test_server.py
tests/e2e/: README_AGENT.md  cleanup_utils.py  create_mock.py  runner.py  suite_main.py
